bk_ida/gccida/g2/store_constructor
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4861:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4862:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4863:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4869:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rttree; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4875:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4876:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4882:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4894:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v47; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4895:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v48; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4896:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v49; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4897:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v50; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4902:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v55; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4905:5: error: expected ';' after expression
tree set_constructor_bits; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4905:6: error: use of undeclared identifier 'set_constructor_bits'; did you mean 'get_set_constructor_bits'?
tree set_constructor_bits; // rax 
     ^~~~~~~~~~~~~~~~~~~~
     get_set_constructor_bits
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/tree.h:2746:13: note: 'get_set_constructor_bits' declared here
extern tree get_set_constructor_bits            PARAMS ((tree, char *, int));
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4909:5: error: expected ';' after expression
tree v62; // r15 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4909:6: error: use of undeclared identifier 'v62'
tree v62; // r15 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4915:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v68; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4916:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v69; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/expr.c:4919:5: error: expected ';' after expression
tree v72; // rbx 
    ^
    ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_constructor/src/obj/expr.o] Error 1
